--- a/jbugs-web/src/main/webapp/templates/template.xhtml
+++ b/jbugs-web/src/main/webapp/templates/template.xhtml
@@ -7,6 +7,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
+<h:title>JBugs</h:title>
 <h:head></h:head>
 
 <h:body>
